--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
 {
   "useTabs": false,
-  "printWidth": 100,
   "tabWidth":2,
   "trailingComma": "all",
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "endOfLine": "lf"
 }
